# irin

./: .dockerignore  .gitignore  .gitleaks.toml  .grokignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SUPPORT.md  deny.toml  greptile.json
council-rs/: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  agy_routing.yaml  build.rs  claude_routing.yaml  gemini_routing.yaml  grok_routing.yaml  models.yaml  roles.yaml
council-rs/cabinets/: checklist-duo.yaml  code-verify.yaml  duo.yaml  freeride.yaml  heritage.yaml  quick.yaml  reflection.yaml  sovereign.yaml  standard.yaml  starter-nvidia.yaml  triad-architecture.yaml  triad-debugging.yaml  triad-product.yaml  triad-risk.yaml  triad-shipping.yaml  triad-strategy.yaml  triage.canary-novertex.yaml  triage.yaml  trinity.yaml  wargame.yaml  warroom.yaml
council-rs/config/: nim-invokable-allowlist.txt
council-rs/docs/: operator-guide.md  persistence.md  providers.md  war-room.md
council-rs/eval/fixtures/: judge_eval.json  seat_topics.json  sheldon_eval.json
council-rs/examples/: evidence_smoke.rs
council-rs/prompts/: analyst.tera  ceo.tera  checker.tera  constraint.tera  meta_review.tera  mirror.tera  mirror_warroom.tera  operator.tera  red_team.tera  strategist.tera
council-rs/prompts/webhooks/: discord.tera  slack.tera  telegram.tera
council-rs/schemas/: index.v2.schema.json  judge.v2.schema.json  session.v2.schema.json
council-rs/scripts/: council_audit.py  hermes-seat-adapter.sh  judge_eval.py  migrate_sessions_v2.py  session_diff.py  sheldon_eval.py  warroom-browser-dev.sh  warroom-tauri-dev.sh
council-rs/src/: evidence.rs  governance.rs  lib.rs  main.rs  mapmaker.rs  mode.rs  registry.rs  scrub.rs  server.rs  tests.rs  types.rs  xmcp.rs
council-rs/src/config/: mod.rs
council-rs/src/engine/: context.rs  deliberate.rs  direct_fire.rs  directive_fence.rs  judge_eval.rs  mod.rs  sheldon.rs  sheldon_eval.rs
council-rs/src/librarian/: adapter.rs  cabinets.rs  health.rs  idempotency.rs  mod.rs  redaction.rs  routes.rs  storage.rs  title.rs
council-rs/src/precedent/: mod.rs
council-rs/src/provider/: agent_cli.rs  agy_route.rs  claude.rs  claude_route.rs  deepseek.rs  gateway.rs  gemini.rs  gemini_route.rs  gpt.rs  grok.rs  grok_route.rs  hermes_cli.rs  mod.rs  ollama.rs  openai_compat.rs  together.rs
council-rs/src/stream/: deliberate.rs  events.rs  intervention.rs  mod.rs
council-rs/src/warroom/: cabinets_save.rs  clusters.rs  divergence.rs  drift.rs  embeddings.rs  fork.rs  intervention_log.rs  lineage.rs  mapmaker.rs  meta_review.rs  mod.rs  pdf.rs  predict.rs  safe_map.rs
council-rs/tests/: analytics_rest.rs  directive_fence_golden.rs  evidence_sheldon.rs  governance_signature.rs  grok_chair_fixture.rs  librarian_health.rs  librarian_ws.rs  nvidia_courtesy_config.rs  smoke.py  test_deliberate.rs  test_redaction_live.rs  test_security_gates.rs  triage_escalation_response.rs  validate_index.py  validate_session.py  ws_upgrade_protocol.rs
council-rs/tests/fixtures/grok_chair/: 01.fence.txt  02.fence.txt  03.fence.txt  04.fence.txt  05.fence.txt  06.fence.txt  07.fence.txt  08.fence.txt  09.fence.txt  10.fence.txt  11.fence.txt  12.fence.txt  13.fence.txt  14.fence.txt  15.fence.txt  16.fence.txt  17.fence.txt  18.fence.txt  19.fence.txt  20.fence.txt  escalations.txt  generate.sh
council-rs/warroom-tauri/: .gitignore  README.md  package-lock.json  package.json
council-rs/warroom-tauri/scripts/: build-warroom-assets.sh  smoke-hybrid-build.sh  smoke-thin-build.sh  stage-bundle-inputs.sh
council-rs/warroom-tauri/src-tauri/: .gitignore  Cargo.toml  build.rs  build_support.rs  tauri.conf.json
council-rs/warroom-tauri/src-tauri/capabilities/: default.json
council-rs/warroom-tauri/src-tauri/src/: docker_cli.rs  keychain.rs  lib.rs  main.rs  paths.rs  private_config.rs  sidecar.rs
council-rs/warroom/docs/: TAURI-AUTH.md
council-rs/warroom/scripts/: env.sh  start-backend.sh  start-frontend.sh
council-rs/warroom/web/: env.local.example  eslint.config.mjs  gitignore.txt  next-env.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.export.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
council-rs/warroom/web/app/: globals.css  layout.tsx  page.tsx
council-rs/warroom/web/components/: CabinetEditor.tsx  (+35 more)
gateway/sidecar-rs/: .dockerignore  Cargo.toml  Dockerfile  build.rs
gateway/sidecar-rs/examples/: buildid_probe.rs
gateway/sidecar-rs/src/: auth.rs  budget.rs  cache.rs  council.rs  council_storage.rs  decontaminator.rs  enforcer.rs  keymgmt.rs  ledger.rs  lib.rs  main.rs  policy.rs  ratelimit.rs  router.rs  socket.rs  sovereignty_gate.rs  unified_config.rs  vertex_auth.rs
gateway/sidecar-rs/tests/: comms_envelope.rs  council_idem.rs  daily_spend_cap.rs  ledger_export_auth.rs  p0e_real_charge.rs  preimage_vectors.py  proptest_preimage.rs  socket_perms.rs  ui.rs  watch_api.rs  watch_arm_audit_migration.rs  watch_arm_router.rs  watch_chain.rs  watch_dispatch_arm_gate.rs  watch_dispatch_keymgmt.rs  watch_dispatch_live.rs  watch_dispatch_schema.rs  watch_dispatcher_c11.rs  watch_falsification.rs  watch_falsification_multiprocess.rs  watch_falsification_occ.rs  watch_fires_preimage_migration.rs  watch_health.rs  watch_outbox_helper.rs  watch_pending_retry.rs  watch_pipeline_pregate.rs  watch_precedent_integrity.rs  watch_producer_drain.rs  watch_provenance_harness.rs  watch_prune.rs  watch_quarantine.rs  watch_registry.rs  watch_reserve_ambient_narrow.rs  watch_reserve_attested_ceiling.rs  watch_runner.rs  watch_sentinels.rs  watch_spend_cap_invariant_load.rs  watch_stats.rs  watch_threading.rs  watch_worker.rs
sentinel/sovereign-protocol/: .gitignore  Cargo.toml  build.rs
sentinel/sovereign-protocol/src/: directive.rs  escalation.rs  fence_case.rs  fence_vectors.rs  jcs.rs  lib.rs  types.rs
sentinel/sovereign-protocol/tests/: envelope_roundtrip_prop.rs  fence_vectors_golden.rs  jcs_conformance.rs  provenance_guard.rs  wire_envelope_reject.rs  wire_golden.rs
(+291 files in other folders)
