[workspace]
members = [
    "gateway/sidecar-rs",
    "sentinel/sovereign-protocol",
    "council-rs",
]
# The Tauri app builds and tests on its own. Without the exclude, Cargo
# auto-discovers this root workspace and refuses to build it
# ("believes it's in a workspace when it's not").
exclude = [
    "council-rs/warroom-tauri/src-tauri",
]
resolver = "2"
