[package]
name = "council-rs"
version = "0.1.0"
edition = "2024"
description = "Sovereign Intelligence Council — multi-model deliberation engine"
license = "Apache-2.0"

[dependencies]
# Async runtime — true parallel fan-out to 4+ providers
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Constant-time equality for service-identity auth comparisons (§4.6)
subtle = "2.5"

# HTTP client with JSON, streaming, rustls, and timeouts. Native TLS is disabled.
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "blocking"], default-features = false }

# Web server — axum for WebSocket + REST
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors"] }
futures-util = "0.3"

# Serialization — types shared across the sovereign stack
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Prompt templates — Jinja2-compatible, hot-reloadable
tera = "1"

# CLI — derive macro for zero-boilerplate argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3.12"
anyhow = "1"
thiserror = "2"

# Local embeddings — MiniLM-L6-v2 via ONNX Runtime, all in-process.
# First run downloads ~80MB model file to ~/.cache/fastembed/.
# Keep fastembed's download paths on rustls so the reqwest 0.13 wave does not
# leave a transitive reqwest 0.12 / native-tls island through hf-hub.
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }

# Regex — used by librarian secret-redaction and chat-id validation
regex = "1"
sovereign-protocol = { version = "0.1.1", path = "../sentinel/sovereign-protocol" }
sha2 = "0.11.0"
hex = "0.4.3"
tracing = "0.1.44"
base64 = "0.22"
ed25519-dalek = "2"

# Optional: Python bindings via PyO3
# Build with: cargo build --features pyo3
[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]
optional = true

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# WebSocket client for /ws/librarian integration tests (R20). Pinned to the
# version already in the lockfile (transitive via axum) so no new dep weight.
tokio-tungstenite = "0.29"

[[bin]]
name = "council"
path = "src/main.rs"

[lib]
name = "council_rs"
path = "src/lib.rs"
# When building Python extension:
# crate-type = ["cdylib"]
