[package]
name = "council-warroom-tauri"
version = "0.1.0"
description = "Council War Room desktop shell (Tauri)"
authors = ["Sovereign Council"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "council_warroom_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
security-framework-sys = "2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
libc = "0.2"


# Standalone crate: its own workspace root. Under the IRIN mono-repo a parent
# workspace exists at the repo root; without this table cargo attaches this
# crate to it and refuses standalone builds.
[workspace]
